feat: markup has been amended

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,11 @@
     <header class="header">
         <div class="header-cont">
             <h1>Online Calculator</h1>
-            <!-- <button class="update-btn">Update Calculator</button> -->
         </div>
     </header>
     <main class="main">
         <div class="main-cont">
-            <input class="calc-input" autocomplete="off" autofocus>
+            <input class="calc-input" autocomplete="off">
             <div class="calc-btns">
                 <div class="rows">
                     <div class="calc-btn-mc mr">MC</div>
