feat: add new btn for memory and correct previous

--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,12 @@
             <input class="calc-input" autocomplete="off">
             <div class="calc-btns">
                 <div class="rows">
+                    <div class="calc-btn-ms mr">MS</div>
                     <div class="calc-btn-mc mr">MC</div>
                     <div class="calc-btn-mr mr">MR</div>
-                    <div class="calc-btn-m- mr">M-</div>
-                    <div class="calc-btn-m+ mr">M+</div>
-                    <div class="calc-btn-rad calc-btn-sym">√</div>
+                    <div class="calc-btn-mm mr">M-</div>
+                    <div class="calc-btn-mp mr">M+</div>
+                    <div class="calc-btn-p/m calc-btn-sym">±</div>
                 </div>
                 <div class="rows">
                     <div class="calc-btn-del calc-btn-sym">▶</div>
