feat: changed the order of some buttons

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     </header>
     <main class="main">
         <div class="main-cont">
-            <input class="calc-input" autocomplete="off">
+            <input class="calc-input" autocomplete="off" value="0">
             <div class="calc-btns">
                 <div class="rows">
                     <div class="calc-btn-ms mr">MS</div>
@@ -32,21 +32,21 @@
                     <div class="calc-btn-mul calc-btn-sym">&#215;</div>
                 </div>
                 <div class="rows">
-                    <div class="calc-btn-p/m calc-btn-sym">±</div>
+                    <div class="calc-btn-bra calc-btn-sym">(</div>
                     <div class="calc-btn-num">4</div>
                     <div class="calc-btn-num">5</div>
                     <div class="calc-btn-num">6</div>
                     <div class="calc-btn-div calc-btn-sym">÷</div>
                 </div>
                 <div class="rows">
-                    <div class="calc-btn-er">C</div>
+                    <div class="calc-btn-bra calc-btn-sym">)</div>
                     <div class="calc-btn-num">1</div>
                     <div class="calc-btn-num">2</div>
                     <div class="calc-btn-num">3</div>
                     <div class="calc-btn-plus calc-btn-sym">+</div>
                 </div>
                 <div class="rows">
-                    <div class="calc-btn-per calc-btn-sym">%</div>
+                    <div class="calc-btn-er">C</div>
                     <div class="calc-btn-num">0</div>
                     <div class="calc-btn-num">.</div>
                     <div class="calc-btn-eq calc-btn-sym">=</div>
