feat: added calculator memory

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     </header>
     <main class="main">
         <div class="main-cont">
+            <div class="memory">M</div>
             <input class="calc-input" autocomplete="off" value="0">
             <div class="calc-btns">
                 <div class="rows">
