--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
     <title>Online Calculator</title>
 </head>
 <body>
@@ -23,7 +24,6 @@
                     <div class="calc-btn-mr mr">MR</div>
                     <div class="calc-btn-mm mr">M-</div>
                     <div class="calc-btn-mp mr">M+</div>
-                    <div class="calc-btn-p/m calc-btn-sym">±</div>
                 </div>
                 <div class="rows">
                     <div class="calc-btn-del calc-btn-sym">▶</div>
